<resources>
    <string name="app_website">http://www.daydreaming-the-app.net</string>
    <string name="app_mail">contact@daydreaming-the-app.net</string>
    <string name="app_name">Day Dreaming</string>
    <string name="menu_settings">Settings</string>
    <string name="dashboard_title_activity">Dashboard</string>
    <string name="dashboard_text_experiment_running">Experiment is running.</string>
    <string name="dashboard_quit_experiment">Quit</string>
    <string name="dashboard_text_days_elapsed">Days elapsed</string>
    <string name="dashboard_title_results">Results:</string>
    <string name="dashboard_text_results">Results will appear once the first X days are completed (that\'s in Z days).</string>
    <string name="dashboard_button_text_about">About</string>
    <string name="dashboard_button_text_terms">Terms</string>
    <string name="dashboard_button_text_description">Description</string>
    <string name="firstLaunchWelcome_title_activity">Day Dreaming</string>
    <string name="firstLaunchWelcome_text_welcome">Day Dreaming Experiment</string>
    <string name="firstLaunchWelcome_button_start">Start</string>
    <string name="firstLaunchDescription_title_activity">Description</string>
    <string name="firstLaunchDescription_text_title1">WELCOME TO</string>
    <string name="firstLaunchDescription_text_title2">THE DAYDREAMING APP!</string>
    <string name="firstLaunchDescription_button_next">Next</string>
    <string name="consentAlert_title">Experiment consent</string>
    <string name="consentAlert_text">Bla bla bla do you consent?</string>
    <string name="consentAlert_button_consent">Agree</string>
    <string name="consentAlert_button_no_consent">Disagree</string>
    <string name="firstLaunchTerms_title_activity">Consent</string>
    <string name="firstLaunchTerms_text_title">CONSENT</string>
    <string name="firstLaunchTerms_text_consent">Consent</string>
    <string name="firstLaunchTerms_button_agree">Agree</string>
    <string name="firstLaunchTerms_button_disagree">Disagree</string>
    <string name="firstLaunchTerms_text_please_scroll">Scroll down terms</string>
    <string name="firstLaunchTerms_text_more_consent">More information</string>
    <string name="time_window_lb">From </string>
    <string name="time_window_ub">Until</string>
    <string name="time_window_settings">Time window for notifications</string>
    <string name="notifications_settings">Notifications</string>
    <string name="settings_picker_positive">Set</string>
    <string name="settings_picker_negative">Cancel</string>
    <string name="firstLaunchSettings_title_activity">Settings</string>
    <string name="settings_title_activity">Settings</string>
    <string name="settings_time_corrected_1">Please allow polls for at least</string>
    <string name="settings_time_corrected_2">hours in the day! The time settings have been reset to default.</string>
    <string name="firstLaunchProfile_title_activity">Profile</string>
    <string name="firstLaunchProfile_title_about_you">A LITTLE ABOUT YOU</string>
    <string name="firstLaunchProfile_hint_age">Age</string>
    <string name="firstLaunchProfile_button_next">Next</string>
    <string name="firstLaunchProfile_fix_age">Please enter an age between 5 and 100</string>
    <string name="firstLaunchProfile_text_gender">Gender</string>
    <string name="firstLaunchProfile_text_education">Education</string>
    <string name="firstLaunchProfile_text_age">Age</string>
    <string name="firstLaunchProfile_Spinner_gender_prompt">Select your gender</string>
    <string name="firstLaunchProfile_Spinner_education_prompt">Select your education</string>
    <string name="firstLaunchProfile_Spinner_age_prompt">Select your age</string>
    <string name="firstLaunchMeasures_text_measures">The app will measure:</string>
    <string name="firstLaunchMeasures_text_network_location">Coarse location (network-based)</string>
    <string name="firstLaunchMeasures_text_answers">Answers to the questions</string>
    <string name="firstLaunchMeasures_text_times">Time at which the questions are asked</string>
    <string name="firstLaunchMeasures_text_anonymous">Please notice that all the data collected is ANONYMOUS: as researchers we have no means of identifying who the data collected comes from.</string>
    <string name="firstLaunchMeasures_button_next">Finish</string>
    <string name="firstLaunchMeasures_text_settings_necessary">Change your settings to get location:</string>
    <string name="firstLaunchMeasures_button_settings">Settings&#8230;</string>
    <string name="firstLaunchMeasures_title_activity">Measures &amp; Privacy</string>
    <string name="firstLaunchMeasures2_text_intro">Daydreaming needs internet
        and geolocation to work:</string>
    <string name="firstLaunchMeasures2_text_data">DATA</string>
    <string name="firstLaunchMeasures2_text_network_connection">Network connection</string>
    <string name="firstLaunchMeasures2_explanation_network_connection_ok">Internet connection is used to download the latest questions researchers have prepared and send back your answers; leave this enabled.</string>
    <string name="firstLaunchMeasures2_explanation_network_connection_bad">Enable internet connection so the app can download the latest questions researchers have prepared and you can send back your answers.</string>
    <string name="firstLaunchMeasures2_button_change_data_settings">Change your data settings</string>
    <string name="firstLaunchMeasures2_text_location">LOCATION</string>
    <string name="firstLaunchMeasures2_text_coarse_location">Coarse location</string>
    <string name="firstLaunchMeasures2_explanation_coarse_location_ok">Google\'s network-based location service is used for anonymous geolocation; leave this enabled.</string>
    <string name="firstLaunchMeasures2_explanation_coarse_location_bad">Google\'s network-based location service is used for anonymous geolocation; please enable it.</string>
    <string name="firstLaunchMeasures2_button_change_location_settings">Change your location settings</string>
    <string name="firstLaunchMeasures2_title_activity">Measures</string>
    <string name="firstLaunchMeasures2_good_to_go_ok">Your settings are good, click next!</string>
    <string name="Questionnaire_intro">Here are a number of personality traits that may or may not apply to you.  Please select the statement to indicate the extent to which you agree or disagree with each statement. You should rate the extent to which the pair of traits applies to you, even if one characteristic applies more strongly than the other. </string>
    <string name="Questionnaire_title">PERSONALITY\nQUESTIONNAIRE</string>
    <string name="firstLaunchPull_title_activity">Pull Questions</string>
    <string name="firstLaunchPull_text_intro">We will now fetch content from our servers.\nThis should take no more than a few seconds</string>
    <string name="firstLaunchPull_text_downloading">Download : Waiting for connection</string>
    <string name="firstLaunchPull_text_data_enabled">Network connection</string>
    <string name="firstLaunchPull_text_settings_necessary">You are not connected to the internet, please change your settings.</string>
    <string name="firstLaunchPull_button_settings">Settings</string>
    <string name="firstLaunchPull_button_next">Continue</string>
    <string name="question_welcome_text">Here are a few quick questions:</string>
    <string name="question_button_next">Next</string>
    <string name="question_button_finish">Finish</string>
    <string name="question_thank_you">Thank you for answering these questions!</string>
    <string name="questionSlider_please_slide">(Slide to answer)</string>
    <string name="questionSlider_sliders_untouched_single">Please answer using the slider</string>
    <string name="questionSlider_sliders_untouched_multiple">Please answer on all the sliders</string>
    <string name="questionStarRating_please_rate">(Select a rating to answer) </string>
    <string name="questionStarRating_star_ratings_untouched_single">Please answer using the star scale</string>
    <string name="questionStarRating_star_ratings_untouched_multiple">Please answer on all the star scales</string>
    <string name="questionMultipleChoice_check_all_that_apply">Check all that apply</string>
    <string name="questionMultipleChoice_other_hint">Other</string>
    <string name="questionMultipleChoice_other_please_fill">Please tell us more in the \"Other\" box</string>
    <string name="questionMultipleChoice_please_check_one">Please check at least one option</string>
    <string name="locationAlert_title_location">Enable location</string>
    <string name="locationAlert_title_data">Enable data connection</string>
    <string name="locationAlert_title_location_and_data">Enable location and data</string>
    <string name="locationAlert_text_location">You should enable network-based (coarse) location to continue. Please adjust your settings.</string>
    <string name="locationAlert_text_data">You should enable data connection to continue. Please adjust your settings.</string>
    <string name="locationAlert_text_location_and_data">You should enable network-based (coarse) location AND data connection to continue. Please adjust your settings.</string>
    <string name="locationAlert_button_settings">Go to settings&#8230;</string>
    <string name="questionActivity_catch_key">Press again to exit.\nYou\'ll lose these questions!</string>
    <string name="pollNotification_ticker">Day Dreaming poll</string>
    <string name="pollNotification_title">Day Dreaming</string>
    <string name="pollNotification_text">A few quick questions</string>
    <string name="appsettings_title">SETTINGS</string>
    <string name="appsettings_notification_title">Notifications</string>
    <string name="appsettings_time_title">Time window for notifications</string>
    <string name="appsettings_time_from">From </string>
    <string name="appsettings_time_until">Until </string>
    <string name="appsettings_allow_blink_text">Blinks at questions</string>
    <string name="appsettings_allow_vibrations_text">Vibrates at questions</string>
    <string name="appsettings_allow_sound_text">Beeps at questions</string>
    <string name="crash_toast_text">Oops Daydreaming just crashed! Building a crash report...</string>
    <string name="crash_dialog_text">Daydreaming just crashed, sorry! Please
        help us by sending this crash report so we can fix the problem. You
        can also add your name or email if you agree to be contacted
        by the developers.</string>
    <string name="crash_dialog_title">Daydreaming crash report</string>
    <string name="crash_dialog_ok_toast">The Android lords be with you! Thanks for sending the report</string>
    <string name="crash_dialog_comment_prompt">Name or email</string>
</resources>