<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical" >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical" >

            <TextView
                    android:id="@+id/firstLaunchPull_text_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/firstLaunchPull_text_intro"
                    android:textAppearance="?android:attr/textAppearanceMedium" />


            <TextView
                    android:id="@+id/firstLaunchPull_text_data_enabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:drawableLeft="@drawable/ic_cross"
                    android:gravity="center_vertical"
                    android:text="@string/firstLaunchPull_text_data_enabled" />

        </LinearLayout>

        <TextView
                android:id="@+id/firstLaunchPull_text_change_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/firstLaunchPull_text_settings_necessary" />

        <TextView
                android:id="@+id/firstLaunchPull_text_downloading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:drawableLeft="@drawable/ic_cross"
                android:gravity="center_vertical"
                android:text="@string/firstLaunchPull_text_downloading" />



        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" >

            <Button
                    android:id="@+id/firstLaunchPull_buttonSettings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClick_buttonSettings"
                    android:text="@string/firstLaunchPull_button_settings"
                    android:visibility="visible" />

            <Button
                    android:id="@+id/firstLaunchPull_buttonNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:alpha="0.3"
                    android:clickable="false"
                    android:onClick="onClick_buttonNext"
                    android:text="@string/firstLaunchPull_button_next" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
