<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical" >


            <TextView
                    android:id="@+id/firstLaunchPull_text_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/firstLaunchPull_text_intro"
                    android:textAppearance="?android:attr/textAppearanceMedium" />


            <TextView
                    android:id="@+id/firstLaunchPull_text_data_enabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:drawableLeft="@drawable/ic_cross"
                    android:gravity="center_vertical"
                    android:text="@string/firstLaunchPull_text_data_enabled" />


        <TextView
                android:id="@+id/firstLaunchPull_text_change_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/firstLaunchPull_text_settings_necessary" />

        <TextView
                android:id="@+id/firstLaunchPull_text_downloading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:drawableLeft="@drawable/ic_cross"
                android:gravity="center_vertical"
                android:text="@string/firstLaunchPull_text_downloading" />



        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="right">


            <ImageButton
                    android:id="@+id/firstLaunchPull_buttonNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:onClick="onClick_buttonNext"
                    android:background="@drawable/button_cloud_next"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
